blue-green-deploy-v1.yaml
# V1: httpd 2.4.41
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  selector:
    matchLabels:
      app: app-v1
  replicas: 2
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
        - name: app-v1
          image: docker.io/library/httpd:2.4.41
          ports:
            - containerPort: 80
