blue-green-deploy.yaml
# V1: httpd 2.4
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  selector:
    matchLabels:
      app: app-v1
  replicas: 2
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
        - name: app-v1
          image: docker.registry.io/httpd:2.4
          ports:
            containerPort: 80

# V2: httpd 2.4.46
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  selector:
    matchLabels:
      app: app-v2
  replicas: 2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
        - name: app-v2
          image: docker.registry.io/httpd:2.4.46
          ports:
            containerPort: 80
