blue-green-deploy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
      paths: /app
      pathType: prefix
      backend:
        service: 
          name: service
          port:
            number: 80
